chore: updated car image display sizes, fix: navbar on small screens link issue

--- a/app/(site)/globals.css
+++ b/app/(site)/globals.css
@@ -183,6 +183,9 @@ height: 40px;
   height: auto;
   min-height: 600px;
 }
+.faq-icons {
+  color: black;
+}
 
 .faq-icons,
 .faq-accordion {
@@ -191,6 +194,7 @@ height: 40px;
 
 .faq-icons.rotate {
   transform: rotate(180deg);
+  color: black;
 }
 
 .select-component-container {
@@ -201,10 +205,10 @@ z-index: 100;
   cursor: pointer;
   transform: scale(1, 1);
   transition: transform 1s ease-in-out;
-  width: 320px;
-  max-width: 320px;
-  height: 400px;
-  max-height: 400px;
+  width: 360px;
+  max-width: 360px;
+  height: 410px;
+  max-height: 450px;
   border-radius: 10px;
   padding: 5px;
   margin: 0 5px;
@@ -215,12 +219,12 @@ z-index: 100;
   box-shadow: 0 0 6px #c3c7cb;
 }
 
-.buy-message {
+.buy-link {
   position: relative;
   display: inline-block;
 }
 
-.buy-message::before {
+.buy-link::before {
   content: "";
   position: absolute;
   top: 0;
@@ -229,7 +233,7 @@ z-index: 100;
   height: 100%;
   background: linear-gradient(to right, transparent, #fff, transparent);
   z-index: 1;
-  animation: shine 2s linear infinite;
+  animation: shine 3s linear infinite;
 }
 
 @keyframes shine {
@@ -241,8 +245,12 @@ z-index: 100;
   }
 }
 
+.buy-link:hover {
+  transform: scale(1.1);
+
+}
 .product-card:hover {
-  transform: scale(0.9);
+  transform: scale(0.96);
 }
 
 .product-card p {
@@ -271,8 +279,8 @@ width: 200px;
 
 .product-card img {
   max-width: 100%;
-  width: 300px;
-  height: 280px;
+  width: 350px;
+  height: 260px;
 }
 
 .logo-container img,
@@ -413,7 +421,6 @@ width: 200px;
   line-height: 1.6rem;
  } 
 }
-
 
 @media screen and (max-width: 431px) {
   
